<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile_menu"/>
    <item
        android:id="@+id/mybooks"
        android:icon="@drawable/book_open_icon"
        android:title="@string/my_books"/>
    <item
        android:id="@+id/search"
        android:icon="@drawable/image_search"
        android:title="@string/search"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings_icon"
        android:title="@string/settings" />
</menu>